GNOME Bugzilla – Bug 753402
SkipTo Error: "Invalid object type 'TotemTimeEntry' on line 60"
Last modified: 2015-08-25 12:51:45 UTC
Overview: Using the "Skip To" item from the vertical dot menu does not function, instead giving an error: "Couldn't load the '/usr/lib/totem/plugins/skipto/skipto.ui' interface. Invalid object type 'TotemTimeEntry' on line 60. Make sure that Totem is properly installed." The only option is "OK" after that. Steps to Reproduce: 1) Open video in Totem 2) Click three vertical dots menu in bottom-right 3) Select "Skip To" 4) Observe error Actual Results: Couldn't load the '/usr/lib/totem/plugins/skipto/skipto.ui' interface. Invalid object type 'TotemTimeEntry' on line 60. Make sure that Totem is properly installed. Expected Results: Dialog opens, allowing me to choose the time to skip to. Build Date & Hardware: Totem 3.16.2 on Arch Linux 4.1.4-1 x86_64 Nvidia GTX 970 Intel Core i7-3770K CPU @ 3.50GHz
Terminal messages as well, with debug set (G_MESSAGES_DEBUG=all totem): Gtk-Message: GtkDialog mapped without a transient parent. This is discouraged. (totem:10321): GLib-GObject-WARNING **: instance with invalid (NULL) class pointer (totem:10321): GLib-GObject-CRITICAL **: g_signal_handlers_destroy: assertion 'G_TYPE_CHECK_INSTANCE (instance)' failed (totem:10321): GLib-GObject-WARNING **: instance with invalid (NULL) class pointer (totem:10321): GLib-GObject-CRITICAL **: g_signal_handlers_destroy: assertion 'G_TYPE_CHECK_INSTANCE (instance)' failed (totem:10321): GLib-GObject-WARNING **: invalid (NULL) pointer instance (totem:10321): GLib-GObject-CRITICAL **: g_signal_connect_data: assertion 'G_TYPE_CHECK_INSTANCE (instance)' failed (totem:10321): GLib-GObject-WARNING **: invalid (NULL) pointer instance (totem:10321): GLib-GObject-CRITICAL **: g_signal_connect_data: assertion 'G_TYPE_CHECK_INSTANCE (instance)' failed (totem:10321): GLib-GObject-CRITICAL **: g_object_add_weak_pointer: assertion 'G_IS_OBJECT (object)' failed (totem:10321): Totem-CRITICAL **: totem_skipto_set_current: assertion 'TOTEM_IS_SKIPTO (skipto)' failed
commit 23f5c9a3d8eb8a3165626b4db4176941a7708a36 Author: Bastien Nocera <hadess@hadess.net> Date: Tue Aug 25 14:47:20 2015 +0200 skipto: Avoid crash when activating the skipto dialogue The dialogue will have been destroyed by the time the spinbutton's adjustment will emit a signal, make sure we don't try to access it during dispose. commit 917ff3e5340fe6687624adf59c92d34117513b45 Author: Bastien Nocera <hadess@hadess.net> Date: Tue Aug 25 14:46:28 2015 +0200 skipto: Connect to signals by hand For some reason, GtkBuilder can't find the signals to connect to, despite the correct linker flags being used. Don't fight it, and connect to them by hand instead. commit 3367d1fd8f163e2416535623bc4daf935a595cba Author: Bastien Nocera <hadess@hadess.net> Date: Tue Aug 25 14:43:02 2015 +0200 skipto: Fix dialogue not showing up The dialogue wasn't showing up because GtkBuilder couldn't find the TotemTimeEntry class. Import it and reference it so it can be found by GtkBuilder. https://bugzilla.gnome.org/show_bug.cgi?id=753402