skipto: Fix dialogue not showing up

The dialogue wasn't showing up because GtkBuilder couldn't find
the TotemTimeEntry class. Import it and reference it so it can be found
by GtkBuilder.

https://bugzilla.gnome.org/show_bug.cgi?id=753402